@@ -1215,6 +1215,8 @@
 <br>
 <br>
 <b>3.4.x</b><br>
+1) goahead: fix rebuild some script.<br>
+2) init.d: remove unneded delete generated by goahead scripts logic.<br>
 <br>
 <br>
 <b>TODO:</b><br>
